stop annoying jump on photo page as placeholder image loads

--- a/phonegap/www/css/fms.css
+++ b/phonegap/www/css/fms.css
@@ -203,6 +203,7 @@
     }
 
     img.small {
+        min-height: 45%;
         max-width: 85%;
         max-height: 45%;
     }
